--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     //adid
     implementation 'androidx.ads:ads-identifier:1.0.0-alpha04'
     // Used for the calls to addCallback() in the snippets on this page.
-    implementation 'com.google.guava:guava:28.0-android'
+    implementation 'com.google.guava:guava:29.0-jre'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 }
